# C-Practice1

./: .gitignore  hello1.txt
Build_Tools/cmake_practice/cal/: CMakeLists.txt
Build_Tools/cmake_practice/cal/src/: fibonacci.c  mul.c  odd_even.c
Build_Tools/conf/cal/: Makefile.am  configure  configure.ac
Build_Tools/conf/cal/autom4te.cache/: output.1  requests  traces.0  traces.1
Build_Tools/conf/cal/include/: calculator.h
Build_Tools/conf/cal/src/: Makefile.am  Makefile.in  div.c
Build_Tools/conf/cal/test/: Makefile.am  Makefile.in
Docker/: Dockerfile
Interview/bitwise/: highest_bit  lowest_set.c
Interview/strings/: lowtoup  lowtoup.c  reverse  reverse.c  strcomp  strcomp.c  strconc  strconc.c  strcopy  strcopy.c  strings.c  strings.h  strlen  strlen.c  togglecase  togglecase.c  totaltypes  totaltypes.c  uptolow  uptolow.c  vowel  vowels.c
Linux/Project/: exce_shell
Project/: calci  test.c
Project/cal/: CMakeLists.txt  calculator.c  calculator.h
Qcc/: README  gpio_led.c
Qcc/Project/: examp.c  str_to_bcd.c
c_practice/Q3/: 1.c  2.c  3  3.c  4.c
c_practice/arrays/: 1  1.c  10.c  11.c  12.c  13.c  19.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c  a.out  dup.c  hh.c  merge.c
c_practice/c/: 123.c  a.out  ass2.c  digfreq.c  floyd.c  func.c  hi  main  main1.c  pattern.c  pattern2.c  pow4.c  power.c  rev  rev.c  tokens.c  vowels.c  world.c
c_practice/dma/: a.out  swap.c
c_practice/dyna/: arith_dynamic  arithmetic.c  libarith.so.1
c_practice/mine/: 100.c  bb  bit.c  (+11 more)
mine/: aa  cc  ee  invpy.c  res2  res3  tog.c  triangle.c
stm32/: lcd_main.c
(+157 files in other folders)
